--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,13 @@
         "cviebrock/eloquent-sluggable": "*",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "intervention/image": "^2.7",
         "laravel/framework": "^8.75",
         "laravel/jetstream": "*",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
-        "livewire/livewire": "^2.5"
+        "livewire/livewire": "^2.5",
+        "ext-gd": "*"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
